--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   dots_indicator: ^2.0.0
   persistent_bottom_nav_bar: ^4.0.2
   shared_preferences: ^2.0.11
-
+  intl: ^0.19.0
 
 
   cupertino_icons: ^1.0.2
